--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,15 @@ matplotlib>=2.2.2
 numpy==1.15.4
 openbabel
 pandas>=1.01
-paramiko==2.6.0
+paramiko>=2.6.0
 psi4
-py3Dmol==0.8.0
+py3Dmol>=0.8.0
 pytables
 pyyaml
 qcelemental
 rdkit>=2019.09.2.0
+xtb
+torchani
 
 # For running the unit tests
 nose
