Added TorchANI and xTB to the environment

--- a/environment.yml
+++ b/environment.yml
@@ -55,3 +55,7 @@ dependencies:
   - conda-forge::qcelemental
   - mako
   - pytables
+  - pytorch::pytorch
+  - anaconda::pytest
+  - conda-forge::torchani
+  - conda-forge::xtb
