--- a/environment.yml
+++ b/environment.yml
@@ -55,7 +55,7 @@ dependencies:
   - conda-forge::qcelemental
   - mako
   - pytables
-  - pytorch::pytorch
+  - pytorch::pytorch >=1.12.0
   - anaconda::pytest
   - conda-forge::torchani
   - conda-forge::xtb
